transform all images from spotify